[package]
name = "async-http-requester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
